--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -12,8 +12,9 @@ RUN apk add g++ \
 
 WORKDIR /usr/src
 
-RUN git clone git://soutade.fr/libgourou.git \
-  && cd libgourou \
+
+RUN git clone https://github.com/neoxai/libgourou.git 
+RUN cd libgourou \
   && make BUILD_STATIC=1
 
 # copy from builder to runtime image
